# llamagraph

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/models/: pipeline.py
backend/routers/: files.py  ollama.py  pipeline.py
backend/services/: constants.py  executor.py  file_converter.py  graph.py  node_handlers.py  ollama_client.py  pipeline_utils.py  transform_ops.py
backend/tests/: test_executor.py  test_file_converter.py  test_file_input_handlers.py  test_files_router.py  test_graph.py  test_json_api_handler.py  test_ollama_router.py  test_pipeline_run.py  test_pipeline_validate.py  test_regex_safety.py  test_transform_ops.py
examples/: json_api_example.llamagraph.json  product_ideation.llamagraph.json
frontend/: Dockerfile  package.json
frontend/__tests__/: formatValidationMessage.test.ts  jsonApiPreview.test.ts  nodeExecutionChrome.test.ts  pipelineFile.test.ts  promptPlaceholders.test.ts  stores.test.ts  validationStore.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  debugNodeIo.test.ts  debugNodeIo.ts  fileInput.test.ts  formatValidationMessage.ts  graphOrder.test.ts  graphOrder.ts  jsonApiParams.ts  jsonApiPreview.ts  nodeConfig.ts  nodeExecutionChrome.ts  nodePreview.ts  pipelineFile.ts  promptPlaceholders.ts  sseClient.ts  transformPreview.test.ts  transformPreview.ts  uiChromeSession.ts  useFileInput.ts
frontend/store/: executionStore.ts  (+2 more)
(+27 files in other folders)
